y.output

0: shift/reduce conflict (shift 6(0), red'n 2(0)) on LF
0: shift/reduce conflict (shift 17(0), red'n 2(0)) on WORD
0: shift/reduce conflict (shift 18(0), red'n 2(0)) on TIME
0: shift/reduce conflict (shift 19(0), red'n 2(0)) on TIME_SIG
0: shift/reduce conflict (shift 25(0), red'n 2(0)) on 'c'
0: shift/reduce conflict (shift 26(0), red'n 2(0)) on 'd'
0: shift/reduce conflict (shift 27(0), red'n 2(0)) on 'e'
0: shift/reduce conflict (shift 28(0), red'n 2(0)) on 'f'
0: shift/reduce conflict (shift 29(0), red'n 2(0)) on 'g'
0: shift/reduce conflict (shift 30(0), red'n 2(0)) on 'a'
0: shift/reduce conflict (shift 31(0), red'n 2(0)) on 'b'
0: shift/reduce conflict (shift 32(0), red'n 2(0)) on 'r'
0: shift/reduce conflict (shift 22(0), red'n 2(0)) on '['
0: shift/reduce conflict (shift 23(0), red'n 2(0)) on ']'
0: shift/reduce conflict (shift 24(0), red'n 2(0)) on ':'
0: shift/reduce conflict (shift 11(0), red'n 2(0)) on 'l'
0: shift/reduce conflict (shift 12(0), red'n 2(0)) on 'v'
0: shift/reduce conflict (shift 14(0), red'n 2(0)) on 'q'
0: shift/reduce conflict (shift 13(0), red'n 2(0)) on 'o'
0: shift/reduce conflict (shift 15(0), red'n 2(0)) on 't'
0: shift/reduce conflict (shift 21(0), red'n 2(0)) on 'n'
0: shift/reduce conflict (shift 16(0), red'n 2(0)) on '@'
0: shift/reduce conflict (shift 7(0), red'n 2(0)) on '>'
0: shift/reduce conflict (shift 8(0), red'n 2(0)) on '<'
0: shift/reduce conflict (shift 9(0), red'n 2(0)) on '`'
0: shift/reduce conflict (shift 10(0), red'n 2(0)) on '"'
state 0
	$accept: .program $end 
	block: .    (2)

	LF  shift 6
	WORD  shift 17
	TIME  shift 18
	TIME_SIG  shift 19
	'c'  shift 25
	'd'  shift 26
	'e'  shift 27
	'f'  shift 28
	'g'  shift 29
	'a'  shift 30
	'b'  shift 31
	'r'  shift 32
	'['  shift 22
	']'  shift 23
	':'  shift 24
	'l'  shift 11
	'v'  shift 12
	'q'  shift 14
	'o'  shift 13
	't'  shift 15
	'n'  shift 21
	'@'  shift 16
	'>'  shift 7
	'<'  shift 8
	'`'  shift 9
	'"'  shift 10
	.  reduce 2 (src line 26)

	program  goto 1
	block  goto 2
	line  goto 3
	tone  goto 4
	loop  goto 5
	toneName  goto 20

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  block.    (1)
	block:  block.line 

	LF  shift 6
	WORD  shift 17
	TIME  shift 18
	TIME_SIG  shift 19
	'c'  shift 25
	'd'  shift 26
	'e'  shift 27
	'f'  shift 28
	'g'  shift 29
	'a'  shift 30
	'b'  shift 31
	'r'  shift 32
	'['  shift 22
	']'  shift 23
	':'  shift 24
	'l'  shift 11
	'v'  shift 12
	'q'  shift 14
	'o'  shift 13
	't'  shift 15
	'n'  shift 21
	'@'  shift 16
	'>'  shift 7
	'<'  shift 8
	'`'  shift 9
	'"'  shift 10
	.  reduce 1 (src line 23)

	line  goto 33
	tone  goto 4
	loop  goto 5
	toneName  goto 20

state 3
	block:  line.    (3)

	.  reduce 3 (src line 28)


state 4
	line:  tone.    (5)

	.  reduce 5 (src line 31)


state 5
	line:  loop.    (6)

	.  reduce 6 (src line 33)


state 6
	line:  LF.    (7)

	.  reduce 7 (src line 34)


state 7
	line:  '>'.    (8)

	.  reduce 8 (src line 35)


state 8
	line:  '<'.    (9)

	.  reduce 9 (src line 36)


state 9
	line:  '`'.    (10)

	.  reduce 10 (src line 37)


state 10
	line:  '\"'.    (11)

	.  reduce 11 (src line 38)


state 11
	line:  'l'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 34

state 12
	line:  'v'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 36

state 13
	line:  'o'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 37

state 14
	line:  'q'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 38

state 15
	line:  't'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 39

state 16
	line:  '@'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 40

state 17
	line:  WORD.'=' expr 

	'='  shift 41
	.  error


state 18
	line:  TIME.'(' expr ':' expr ':' expr ')' 
	line:  TIME.'=' expr ':' expr ':' expr 

	'('  shift 42
	'='  shift 43
	.  error


state 19
	line:  TIME_SIG.'=' expr ',' expr 

	'='  shift 44
	.  error


state 20
	tone:  toneName.expr 
	tone:  toneName.toneFlags expr 
	tone:  toneName.toneFlags 
	tone:  toneName.    (30)

	NUMBER  shift 35
	'#'  shift 48
	'+'  shift 49
	'-'  shift 50
	.  reduce 30 (src line 63)

	expr  goto 45
	toneFlag  goto 47
	toneFlags  goto 46

state 21
	tone:  'n'.expr 
	tone:  'n'.expr ',' expr 

	NUMBER  shift 35
	.  error

	expr  goto 51

state 22
	loop:  '['.expr 
	loop:  '['.    (24)

	NUMBER  shift 35
	.  reduce 24 (src line 55)

	expr  goto 52

state 23
	loop:  ']'.    (25)

	.  reduce 25 (src line 56)


state 24
	loop:  ':'.    (26)

	.  reduce 26 (src line 57)


state 25
	toneName:  'c'.    (33)

	.  reduce 33 (src line 67)


state 26
	toneName:  'd'.    (34)

	.  reduce 34 (src line 68)


state 27
	toneName:  'e'.    (35)

	.  reduce 35 (src line 68)


state 28
	toneName:  'f'.    (36)

	.  reduce 36 (src line 68)


state 29
	toneName:  'g'.    (37)

	.  reduce 37 (src line 68)


state 30
	toneName:  'a'.    (38)

	.  reduce 38 (src line 68)


state 31
	toneName:  'b'.    (39)

	.  reduce 39 (src line 68)


state 32
	toneName:  'r'.    (40)

	.  reduce 40 (src line 68)


state 33
	block:  block line.    (4)

	.  reduce 4 (src line 29)


state 34
	line:  'l' expr.    (12)

	.  reduce 12 (src line 39)


state 35
	expr:  NUMBER.    (22)

	.  reduce 22 (src line 50)


state 36
	line:  'v' expr.    (13)

	.  reduce 13 (src line 40)


state 37
	line:  'o' expr.    (14)

	.  reduce 14 (src line 41)


state 38
	line:  'q' expr.    (15)

	.  reduce 15 (src line 42)


state 39
	line:  't' expr.    (16)

	.  reduce 16 (src line 43)


state 40
	line:  '@' expr.    (17)

	.  reduce 17 (src line 44)


state 41
	line:  WORD '='.expr 

	NUMBER  shift 35
	.  error

	expr  goto 53

state 42
	line:  TIME '('.expr ':' expr ':' expr ')' 

	NUMBER  shift 35
	.  error

	expr  goto 54

state 43
	line:  TIME '='.expr ':' expr ':' expr 

	NUMBER  shift 35
	.  error

	expr  goto 55

state 44
	line:  TIME_SIG '='.expr ',' expr 

	NUMBER  shift 35
	.  error

	expr  goto 56

state 45
	tone:  toneName expr.    (27)

	.  reduce 27 (src line 59)


state 46
	tone:  toneName toneFlags.expr 
	tone:  toneName toneFlags.    (29)
	toneFlags:  toneFlags.toneFlag 

	NUMBER  shift 35
	'#'  shift 48
	'+'  shift 49
	'-'  shift 50
	.  reduce 29 (src line 62)

	expr  goto 57
	toneFlag  goto 58

state 47
	toneFlags:  toneFlag.    (41)

	.  reduce 41 (src line 70)


state 48
	toneFlag:  '#'.    (43)

	.  reduce 43 (src line 74)


state 49
	toneFlag:  '+'.    (44)

	.  reduce 44 (src line 75)


state 50
	toneFlag:  '-'.    (45)

	.  reduce 45 (src line 75)


state 51
	tone:  'n' expr.    (31)
	tone:  'n' expr.',' expr 

	','  shift 59
	.  reduce 31 (src line 64)


state 52
	loop:  '[' expr.    (23)

	.  reduce 23 (src line 53)


state 53
	line:  WORD '=' expr.    (18)

	.  reduce 18 (src line 45)


state 54
	line:  TIME '(' expr.':' expr ':' expr ')' 

	':'  shift 60
	.  error


state 55
	line:  TIME '=' expr.':' expr ':' expr 

	':'  shift 61
	.  error


state 56
	line:  TIME_SIG '=' expr.',' expr 

	','  shift 62
	.  error


state 57
	tone:  toneName toneFlags expr.    (28)

	.  reduce 28 (src line 61)


state 58
	toneFlags:  toneFlags toneFlag.    (42)

	.  reduce 42 (src line 72)


state 59
	tone:  'n' expr ','.expr 

	NUMBER  shift 35
	.  error

	expr  goto 63

state 60
	line:  TIME '(' expr ':'.expr ':' expr ')' 

	NUMBER  shift 35
	.  error

	expr  goto 64

state 61
	line:  TIME '=' expr ':'.expr ':' expr 

	NUMBER  shift 35
	.  error

	expr  goto 65

state 62
	line:  TIME_SIG '=' expr ','.expr 

	NUMBER  shift 35
	.  error

	expr  goto 66

state 63
	tone:  'n' expr ',' expr.    (32)

	.  reduce 32 (src line 65)


state 64
	line:  TIME '(' expr ':' expr.':' expr ')' 

	':'  shift 67
	.  error


state 65
	line:  TIME '=' expr ':' expr.':' expr 

	':'  shift 68
	.  error


state 66
	line:  TIME_SIG '=' expr ',' expr.    (21)

	.  reduce 21 (src line 48)


state 67
	line:  TIME '(' expr ':' expr ':'.expr ')' 

	NUMBER  shift 35
	.  error

	expr  goto 69

state 68
	line:  TIME '=' expr ':' expr ':'.expr 

	NUMBER  shift 35
	.  error

	expr  goto 70

state 69
	line:  TIME '(' expr ':' expr ':' expr.')' 

	')'  shift 71
	.  error


state 70
	line:  TIME '=' expr ':' expr ':' expr.    (20)

	.  reduce 20 (src line 47)


state 71
	line:  TIME '(' expr ':' expr ':' expr ')'.    (19)

	.  reduce 19 (src line 46)


38 terminals, 10 nonterminals
46 grammar rules, 72/16000 states
26 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 32/240000
1 extra closures
89 shift entries, 1 exceptions
30 goto entries
3 entries saved by goto default
Optimizer space used: output 104/240000
104 table entries, 32 zero
maximum spread: 38, maximum offset: 68
